--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -52,6 +52,7 @@
 	<string name="license">License</string>
 	<string name="notConnected">Not connected</string>
 	<string name="notice">Notice</string>
+	<string name="clear">Clear</string>
 	<string name="ok">OK</string>
 	<string name="apply">Apply</string>
 	<string name="projectSuspendedByUser">Project suspended by user</string>
@@ -412,11 +413,19 @@
 	<string name="configFileWriteError">Unable to write config file</string>
 	
 	<!-- bug catcher activity -->
+	<string name="bugsDetectedTitle">Bugs detected!</string>
+	<string name="bugsDetectedSummary">Bugs has been detected. Please enable BugCatcher.</string>
 	<string name="bugCatcher">Bug catcher mode</string>
-	<string name="bugCatcherDesc">This mode allow to catch a severe bugs in the BOINC and BOINC applications. Please enable this mode to help author to fix bugs.</string>
+	<string name="bugCatcherDesc">This mode allow to catch a severe bugs in the BOINC and BOINC applications.</string>
 	<string name="enableBugCatch">Enable BugCatchMode</string>
 	<string name="sendBugReports">Send reports</string>
-	<string name="bugsList">List of recent bugs</string>
+	<string name="sendBugs">Send bugs</string>
+	<string name="bugSendingProgress">Sending %d bug reports to author</string>
+	<string name="bugSendingError">Can\'t send some bug reports</string>
+	<string name="bugSendingFinished">Sending bug reports finished</string>
+	<string name="bugCopyingProgress">Copying %d bug reports to author</string>
+	<string name="bugCopyingError">Can\'t copy some bug reports</string>
+	<string name="bugCopyingFinished">Copying bug reports finished</string>
 	
 	<string name="synchronizeBAM">Synchronize BAM</string>
 	<!--  progress dialog messages -->
@@ -815,4 +824,7 @@
 	<string name="newsRemoteFile">http://files.nativeboinc.org/news/news.xml</string>
 	<!-- <string name="newsRemoteFile">http://krzyszp.info/matszpk/news/news.xml</string>-->
 	<!-- <string name="newsRemoteFile">http://192.168.1.3:8080/examples/news.xml</string>-->
+	
+	<!-- bug report url -->
+	<string name="bugReportUrl">http://nativeboinc/site/json/report_bugcatch</string>
 </resources>
