--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -833,6 +833,6 @@
 	<!-- <string name="newsRemoteFile">http://192.168.1.3:8080/examples/news.xml</string>-->
 	
 	<!-- bug report url -->
-	<!--<string name="bugReportUrl">http://nativeboinc/site/json/report_bugcatch</string>-->
-	<string name="bugReportUrl">http://192.168.1.3:8080/site/json/report_bugcatch</string>
+	<string name="bugReportUrl">http://nativeboinc.org/site/json/report_bugcatch</string>
+	<!--<string name="bugReportUrl">http://192.168.1.3:8080/site/json/report_bugcatch</string>-->
 </resources>
