--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -421,6 +421,7 @@
 	<string name="enableBugCatch">Enable BugCatchMode</string>
 	<string name="sendBugReports">Send reports</string>
 	<string name="sendBugs">Send bugs</string>
+	<string name="bugCatchAttachError">Unable to attach BugCatcher!</string>
 	<string name="bugsSDCardDirectory">Enter Bugs directory</string>
 	<string name="bugSendingBegin">Begin a sending bug reports to author</string>
 	<string name="bugSendingProgress">Sending bug reports to author</string>
