NativeBOINC: added info about bug catch and advice.

--- a/src/NativeBOINC/res/values/strings.xml
+++ b/src/NativeBOINC/res/values/strings.xml
@@ -421,7 +421,9 @@
 	<string name="enableBugCatch">Enable BugCatchMode</string>
 	<string name="sendBugReports">Send reports</string>
 	<string name="sendBugs">Send bugs</string>
-	<string name="bugCatchAttachError">Unable to attach BugCatcher!</string>
+	<string name="bugCatchAttachFailMessage">Very likely your device has a stock Android version. This version of the NativeBOINC is not debuggable.
+	    To run BugCatchMode please install BugCatchMode version (debuggable) which allow to you use BugCatchMode.
+	    BugCatchMode version available at http://nativeboinc.org/site/uncat/downloads/.</string>
 	<string name="bugsSDCardDirectory">Enter Bugs directory</string>
 	<string name="bugSendingBegin">Begin a sending bug reports to author</string>
 	<string name="bugSendingProgress">Sending bug reports to author</string>
