NativeBOINC: small fixes in translations.

--- a/src/NativeBOINC/res/values-pl/strings.xml
+++ b/src/NativeBOINC/res/values-pl/strings.xml
@@ -86,6 +86,8 @@
 
 	<string name="boincClient">Klient BOINC</string>
 	
+	<string name="boincHosts">Hosty Boinc</string>
+	
 	<!-- Units -->
 	<string name="unitKiB">KiB</string>
 	<string name="unitMiB">MiB</string>
